DD MMM YYYY - 2.9.2 - To be released
------------------------------------

 * Adds rule id in logs whenever a rule fail.
   [Issue #1379, #391 - Marc Stern]
 * {dis|en}able-server-logging: Option to disable logging of
   "Server" in audit log when log level < 9.
   [Issue #1070 - Marc Stern]
 * {dis|en}able-filename-logging: Option to disable logging of filename
   in audit log.
   [Issue #1065 - Marc Stern]
 * Reads fuzzy hash databases on init
   [Issue #1339 - Robert Paprocki and @Rendername]
 * Changes the configuration to recognize soap+xml as XML
   [Issue #1374 - @emphazer and Chaim Sanders]
 * Fix building with nginx >= 1.11.11
   [Issue #1373, #1359 - Andrei Belov and Thomas Deutschmann]
 * Using Czechia instea of Czech Republic
   [Issue #1258 - Michael Kjeldsen]
 * {dis|en}able-rule-id-validation: Option to disable rule id validation
   [Issue #1150 - Marc Stern and ModSecurity team]
 * JSON Log: Append a newline to concurrent JSON audit logs
   [Issue #1233 - Robert Paprocki]
 * JSON Log: Don't unnecessarily rename request body parts in cleanup
   [Issue #1223 - Robert Paprocki]
 * Fix error message inside audit logs
   [Issue #1216 and #1073 - Armin Abfalterer]
 * Remove port from IPV4 address when running under IIS.
   [Issue #1220, #1109 and #734  - Robert Culyer]
 * Remove logdata and msg fields from JSON audit log rule.
   [Issue #1190 and #1174 - Robert Paprocki]
 * Better handle the json parser cleanup
   [Issue #1204 - Ephraim Vider]
 * Fix status failing to report in Nginx auditlogs
   [Issue #977, #1171 - @charlymps and Chaim Sanders]
 * Fix file upload JSON audit log entry
   [Issue #1181 and #1173 - Robert Paprocki and Christian Folini]
 * configure: Fix detection whether libcurl is linked against gnutls and,
   move verbose_output declaration up to the beginning.
   [Issue #1158 - Thomas Deutschmann (@Whissi)]
 * Treat APR_INCOMPLETE as APR_EOF while receiving the request body.
   [Issue #1060, #334 - Alexey Sintsov]

09 Mar 2016 - 2.9.1