@@ -457,6 +457,21 @@ AC_ARG_ENABLE(server-logging,
   log_server=''
 ])
 
+# Disable logging of problem when deleting collection
+AC_ARG_ENABLE(collection-delete-problem-logging,
+              AS_HELP_STRING([--enable-collection-delete-problem-logging],
+                             [Enable logging of collection delete problem in audit log when log level < 9. This is the default]),
+[
+  if test "$enableval" != "no"; then
+    log_collection_delete_problem=
+  else
+    log_collection_delete_problem="-DLOG_NO_COLL_DELET_PB"
+  fi
+],
+[
+  log_collection_delete_problem=''
+])
+
 # Ignore configure errors
 AC_ARG_ENABLE(errors,
               AS_HELP_STRING([--disable-errors],
@@ -707,7 +722,7 @@ else
   fi
 fi
 
-MODSEC_EXTRA_CFLAGS="$pcre_study $pcre_match_limit $pcre_match_limit_recursion $pcre_jit $request_early $htaccess_config $lua_cache $debug_conf $debug_cache $debug_acmp $debug_mem $perf_meas $modsec_api $cpu_type $unique_id $log_filename $log_server"
+MODSEC_EXTRA_CFLAGS="$pcre_study $pcre_match_limit $pcre_match_limit_recursion $pcre_jit $request_early $htaccess_config $lua_cache $debug_conf $debug_cache $debug_acmp $debug_mem $perf_meas $modsec_api $cpu_type $unique_id $log_filename $log_server $log_collection-delete_problem"
 
 APXS_WRAPPER=build/apxs-wrapper
 APXS_EXTRA_CFLAGS=""
